<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosplane_extra</name>
  <version>2.0.0</version>
  <description>Package for extra ROSplane functionality that isn't part of core autonomy stack.</description>
  <maintainer email="bsuther2@byu.edu">Brandon Sutherland</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>rosplane</depend>
  <depend>rosplane_msgs</depend>
  <depend>rosflight_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>

